trying to tackle common ancestor